[gd_scene load_steps=37 format=3 uid="uid://dvodq6q5qc8k"]

[ext_resource type="Script" uid="uid://bsot4hay1mv3b" path="res://scenes/menu.gd" id="1_vjb58"]
[ext_resource type="FontFile" uid="uid://d3j6a31vfsb2" path="res://fonts/Born2bSportyV10.ttf" id="1_yqeox"]
[ext_resource type="AudioStream" uid="uid://cxg4q58es2u77" path="res://the-wheel-godot/Demo/assets/selector_click.wav" id="3_con2f"]
[ext_resource type="AudioStream" uid="uid://csbeflojgx0o3" path="res://sounds/secret.ogg" id="4_4ytvr"]
[ext_resource type="AudioStream" uid="uid://c43qhby2kqxxj" path="res://the-wheel-godot/Demo/assets/rotate.wav" id="4_g3eks"]
[ext_resource type="Script" uid="uid://bnb27fv72jed5" path="res://addons/konamicode/konamicode.gd" id="4_mhnvy"]
[ext_resource type="Texture2D" uid="uid://c4iyind6j56im" path="res://sprites/logo.png" id="7_13sgg"]
[ext_resource type="Texture2D" uid="uid://dxjaq74bfmd8b" path="res://sprites/black.png" id="8_i6lef"]
[ext_resource type="Texture2D" uid="uid://cmvgb68l8tw2n" path="res://sprites/cathybutton.png" id="10_ufwb2"]
[ext_resource type="AudioStream" uid="uid://df6hq07d3o74i" path="res://myusic/dasdask.jnbadsj.knhdashjl.mp3" id="12_ufwb2"]
[ext_resource type="AudioStream" uid="uid://bur2scu4xl8e1" path="res://myusic/chord.mp3" id="13_6cdou"]
[ext_resource type="Texture2D" uid="uid://wo754xgtkye6" path="res://sprites/me.png" id="14_7jp70"]
[ext_resource type="Texture2D" uid="uid://bsd3arnxcla00" path="res://sprites/me2.png" id="14_g6gyw"]
[ext_resource type="Texture2D" uid="uid://dsj3s4rp1uto8" path="res://sprites/n.png" id="15_mxgkd"]
[ext_resource type="Texture2D" uid="uid://ch7fthj0r7g06" path="res://sprites/toddlersoap.png" id="17_3dmrc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g6gyw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6cdou"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3eks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v86rl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_13sgg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i6lef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70i5f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mj5lg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ufwb2"]

[sub_resource type="Animation" id="Animation_mj5lg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../overlay:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Logo:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Logo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 201)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../play:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../play:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(484, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../finderr:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(314, 74)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../options:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(452, 150)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../quit:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(490, 227)]
}

[sub_resource type="Animation" id="Animation_70i5f"]
resource_name = "fadein"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../overlay:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Logo:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9, 1.6),
"transitions": PackedFloat32Array(0.450625, 0.450625),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Logo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9, 1.6),
"transitions": PackedFloat32Array(0.297302, 0.297302),
"update": 0,
"values": [Vector2(576, 201), Vector2(576, 181)]
}

[sub_resource type="Animation" id="Animation_13sgg"]
resource_name = "gamestart"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Vector2(576, 181), Vector2(576, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../play:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.2, 3.4),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Logo:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../play:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3.2, 3.4),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Vector2(484, 0), Vector2(484, -10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../finderr:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.26667, 3.43334),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Vector2(314, 74), Vector2(314, 54)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../quit:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.33333, 3.53333),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Vector2(490, 227), Vector2(490, 217)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../options:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.3, 3.5),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Vector2(452, 150), Vector2(452, 130)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../finderr:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.26667, 3.46667),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../quit:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3.33333, 3.53333),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../options:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(3.3, 3.5),
"transitions": PackedFloat32Array(0.15932, 0.15932),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ufwb2"]
_data = {
&"RESET": SubResource("Animation_mj5lg"),
&"fadein": SubResource("Animation_70i5f"),
&"gamestart": SubResource("Animation_13sgg")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_81l6r"]
texture = ExtResource("14_g6gyw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g6gyw"]
texture = ExtResource("14_7jp70")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rsfmq"]
texture = ExtResource("15_mxgkd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3dmrc"]
texture = ExtResource("17_3dmrc")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7jp70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_81l6r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3dmrc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mxgkd"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 312.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_g6gyw")

[node name="play" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 484.0
offset_right = 670.0
offset_bottom = 74.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0.317647, 0.223529, 0.223529, 1)
theme_override_colors/font_color = Color(0.931967, 0.873901, 0.841749, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_6cdou")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_g3eks")
text = "Play"

[node name="finderr" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 314.0
offset_top = 74.0
offset_right = 840.0
offset_bottom = 148.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0.317647, 0.223529, 0.223529, 1)
theme_override_colors/font_color = Color(0.931967, 0.873901, 0.841749, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_v86rl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_13sgg")
text = "Character Select"

[node name="quit" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 490.0
offset_top = 227.0
offset_right = 664.0
offset_bottom = 301.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0.317647, 0.223529, 0.223529, 1)
theme_override_colors/font_color = Color(0.931967, 0.873901, 0.841749, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_i6lef")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_70i5f")
text = "Quit"

[node name="options" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 452.0
offset_top = 150.0
offset_right = 702.0
offset_bottom = 224.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0.317647, 0.223529, 0.223529, 1)
theme_override_colors/font_color = Color(0.931967, 0.873901, 0.841749, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_mj5lg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ufwb2")
text = "Credits"

[node name="clicksnd" type="AudioStreamPlayer2D" parent="Panel"]
stream = ExtResource("3_con2f")

[node name="confirmsnd" type="AudioStreamPlayer2D" parent="Panel"]
stream = ExtResource("4_g3eks")

[node name="secretsnd" type="AudioStreamPlayer2D" parent="Panel"]
stream = ExtResource("4_4ytvr")

[node name="code" type="Node" parent="."]
script = ExtResource("4_mhnvy")
code_override_keyboard = Array[int]([67, 79, 76, 73, 78])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Panel/confirmsnd")
libraries = {
&"": SubResource("AnimationLibrary_ufwb2")
}

[node name="overlay" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("8_i6lef")

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 113.0
offset_top = 209.0
offset_right = 1077.0
offset_bottom = 568.0

[node name="cathy" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 341.0
offset_right = 633.0
offset_bottom = 355.0
theme_override_icons/icon = ExtResource("10_ufwb2")

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_ufwb2")
autoplay = true
parameters/looping = true

[node name="fuckinggchord" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_6cdou")

[node name="Panel3" type="Panel" parent="."]
visible = false
self_modulate = Color(0.269, 0, 0, 0.511)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="Panel3"]
texture_filter = 1
layout_mode = 0
offset_left = 46.0
offset_top = 294.0
offset_right = 1106.0
offset_bottom = 516.0
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 19
text = "Love Takes The Wheel is a 2025 WHEELJAM submission that I didn't finish in time. Oops.

Art and programming by Pictospark
Music by Toddlersoap (who is actually N in disguise)
Oblivion wheel template by Shane Scott

Special Thanks:
Colin McInerney for creating WHEELJAM and yelling in my ear
Xalavier Nelson Jr for creating BASS REEVES CAN'T DIE
Noodle for making \"how does an indie game get made?\"
My friend Kevin who was supposed to playtest but again i didnt finish in time ahahahahaahahah."
autowrap_mode = 3

[node name="me" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 871.0
offset_top = 290.0
offset_right = 994.0
offset_bottom = 418.0
theme_override_styles/hover = SubResource("StyleBoxTexture_81l6r")
theme_override_styles/normal = SubResource("StyleBoxTexture_g6gyw")

[node name="n" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 871.0
offset_top = 441.0
offset_right = 994.0
offset_bottom = 569.0
theme_override_styles/hover = SubResource("StyleBoxTexture_rsfmq")
theme_override_styles/normal = SubResource("StyleBoxTexture_3dmrc")

[node name="returnbtn" type="Button" parent="Panel3"]
texture_filter = 1
layout_mode = 0
offset_left = 33.0
offset_top = 609.0
offset_right = 164.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7jp70")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_81l6r")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3dmrc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mxgkd")
text = "Return to Game"

[node name="Logo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 201)
scale = Vector2(1.65, 1.65)
texture = ExtResource("7_13sgg")

[connection signal="mouse_entered" from="Panel/play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Panel/play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Panel/finderr" to="." method="_on_finderr_mouse_entered"]
[connection signal="pressed" from="Panel/finderr" to="." method="_on_finderr_pressed"]
[connection signal="mouse_entered" from="Panel/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Panel/quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="Panel/options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="Panel/options" to="." method="_on_options_pressed"]
[connection signal="finished" from="Panel/secretsnd" to="." method="_on_secretsnd_finished"]
[connection signal="success" from="code" to="." method="_on_code_success"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Panel2/cathy" to="." method="_on_cathy_pressed"]
[connection signal="pressed" from="Panel3/me" to="." method="_on_me_pressed"]
[connection signal="pressed" from="Panel3/n" to="." method="_on_n_pressed"]
[connection signal="mouse_entered" from="Panel3/returnbtn" to="." method="_on_returnbtn_mouse_entered"]
[connection signal="pressed" from="Panel3/returnbtn" to="." method="_on_returnbtn_pressed"]
